# Time_Tracker_PKS

./: CMakeLists.txt  README.md
include/: AppFacade.h  CompletedTasksStrategy.h  ConsoleNotifier.h  DayReport.h  Report.h  ReportFactory.h  StatisticsStrategy.h  Task.h  TaskManager.h  TotalTimeStrategy.h  WeekReport.h
src/: AppFacade.cpp  Task.cpp  TaskManager.cpp  main.cpp
